Inclusão icone pesquisa

--- a/interacoes.html
+++ b/interacoes.html
@@ -489,7 +489,7 @@
             <div class="row">
                 <div class="col-area area-msg division-4">
                     <div class="hd">
-                        <h5 class="contact-data"><i class="favorite fas fa-star"></i> William Oliveira<span>11 99105 4384</span><span>ID: 13214</span></h5>
+                        <h5 class="contact-data"><i class="favorite fas fa-star"></i> {{William Oliveira}}<span>11 99105 4384</span><span>ID: 13214</span></h5>
                         <ul class="nav-icon">
                             <li><a href=""><i class="fas fa-search"></i></a></li>
                             <li><a href=""><i class="fas fa-brain"></i></a></li>
@@ -541,6 +541,88 @@
                     <div class="main-msg">
                         <div class="ct-msg">
 
+                            <div class="date-msg">Segunda-feira</div>
+
+                            <div class="msg-info">
+                                <div class="box-msg msg-client">
+                                    <p>Lorem Ipsum</p>
+                                    <span class="time-msg">11:37</span>
+                                    <button class="drop-action dp-active"><i class="fas fa-chevron-down"></i></button>
+                                    <ul class="toggle-action">
+                                        <li><a href="">Responder</a></li>
+                                        <li class="active"><a href="">Encaminhar mensagem</a></li>
+                                        <li><a href="">Marcar mensagem</a></li>
+                                        <li><a href="">Apagar mensagem</a></li>
+                                        <li><a href="">Classificar mensagem</a></li>
+                                        <li><a href="">Detalhes da mensagem</a></li>
+                                    </ul>
+                                    <div class="progress-pl answered">
+                                        <div class="progress-pl-bar" style="width: 100%">
+                                            <div class="timer-prgress">00:58</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="msg-info">
+                                <div class="box-msg msg-client">
+                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's.</p>
+                                    <span class="time-msg">11:37</span>
+                                    <button class="drop-action"><i class="fas fa-chevron-down"></i></button>
+                                    <ul class="toggle-action">
+                                        <li><a href="">Responder</a></li>
+                                        <li class="active"><a href="">Encaminhar mensagem</a></li>
+                                        <li><a href="">Marcar mensagem</a></li>
+                                        <li><a href="">Apagar mensagem</a></li>
+                                        <li><a href="">Classificar mensagem</a></li>
+                                        <li><a href="">Detalhes da mensagem</a></li>
+                                    </ul>
+                                    <div class="progress-pl">
+                                        <div class="progress-pl-bar" style="width: 50%">
+                                            <div class="timer-prgress">00:58</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="msg-info">
+                                <div class="box-msg msg-operator">
+                                    <p>Lorem Ipsum</p>
+                                    <span class="time-msg sent">11:37</span>
+                                </div>
+                            </div>
+
+                            <div class="msg-info">
+                                <div class="box-msg msg-operator">
+                                    <p>Lorem Ipsum</p>
+                                    <span class="time-msg sent">11:37</span>
+                                </div>
+                            </div>
+
+                            <div class="date-msg">Ontem</div>
+
+                            <div class="msg-info">
+                                <div class="box-msg msg-client">
+                                    <p>Lorem Ipsum</p>
+                                    <span class="time-msg">11:37</span>
+                                    <button class="drop-action dp-active"><i class="fas fa-chevron-down"></i></button>
+                                    <!-- <ul class="toggle-action active-tg"> -->
+                                    <ul class="toggle-action">
+                                        <li><a href="">Responder</a></li>
+                                        <li class="active"><a href="">Encaminhar mensagem</a></li>
+                                        <li><a href="">Marcar mensagem</a></li>
+                                        <li><a href="">Apagar mensagem</a></li>
+                                        <li><a href="">Classificar mensagem</a></li>
+                                        <li><a href="">Detalhes da mensagem</a></li>
+                                    </ul>
+                                    <div class="progress-pl answered">
+                                        <div class="progress-pl-bar" style="width: 100%">
+                                            <div class="timer-prgress">00:58</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
                             <div class="date-msg">Hoje</div>
 
                             <div class="msg-info">
@@ -548,7 +630,7 @@
                                     <p>Lorem Ipsum</p>
                                     <span class="time-msg">11:37</span>
                                     <button class="drop-action dp-active"><i class="fas fa-chevron-down"></i></button>
-                                    <ul class="toggle-action active-tg">
+                                    <ul class="toggle-action">
                                         <li><a href="">Responder</a></li>
                                         <li class="active"><a href="">Encaminhar mensagem</a></li>
                                         <li><a href="">Marcar mensagem</a></li>
@@ -721,9 +803,12 @@
                 </div>
                 <div class="col-area area-add-right">
                     <div class="hdr">
-                        <p>William Oliveira</p>
+                        <p>Base de Conhecimento</p>
                     </div>
                     <div class="info-boxes">
+                        <div class="search">
+                            <input type="text" placeholder="Pesquisar">
+                        </div>
                         <div class="ib-gp">
                             <h4>Descrição</h4>
                             <p><strong>Nome:</strong>William Oliveira</p>
