--- a/interacoes.html
+++ b/interacoes.html
@@ -810,39 +810,7 @@
                             <input type="text" placeholder="Pesquisar">
                         </div>
                         <div class="ib-gp">
-                            <h4>Descrição</h4>
-                            <p><strong>Nome:</strong>William Oliveira</p>
-                            <p><strong>Telefone:</strong>+55 11 99105 4384</p>
-                            <p><strong>Favorito:</strong><i class="favorite fas fa-star"></i></p>
-                        </div>
-                        <div class="ib-gp">
-                            <h4>Grupos Adicionados</h4>
-                            <ul class="list-group-contact">
-                                <li class="newmsg">
-                                    <div class="box">
-                                        <span class="circle">WO</span>
-                                        <span class="circle">RO</span>
-                                        <span class="circle">JR</span>
-                                        <span class="circle number">8</span>
-                                    </div>
-                                    <p class="txt">
-                                        <strong>OMNI Informa</strong>
-                                        <span>Henrique Pinheiro, João Paulo, Arnaldo Cezar Coelho, Fulnao de Tal</span>
-                                    </p>
-                                </li>
-                                <li class="newmsg">
-                                    <div class="box">
-                                        <span class="circle">WO</span>
-                                        <span class="circle">RO</span>
-                                        <span class="circle">JR</span>
-                                        <span class="circle number">2</span>
-                                    </div>
-                                    <p class="txt">
-                                        <strong>Status do Atendimento</strong>
-                                        <span>Henrique Pinheiro, João Paulo, Arnaldo Cezar Coelho, Fulnao de Tal</span>
-                                    </p>
-                                </li>
-                            </ul>
+                            {{ Base de Conhecimento }}
                         </div>
                     </div>
                 </div>
