Btn close sidebar right

--- a/interacoes.html
+++ b/interacoes.html
@@ -762,6 +762,9 @@
                 <div class="col-area area-add-right">
                     <div class="hdr">
                         <p>William Oliveira</p>
+                        <button class="btn btn-sn btn-default btn-close">
+                            <i class="fas fa-times"></i>
+                        </button>
                     </div>
                     <div class="info-boxes">
                         <div class="ib-gp">
@@ -804,6 +807,9 @@
                 <div class="col-area area-add-right">
                     <div class="hdr">
                         <p>Base de Conhecimento</p>
+                        <button class="btn btn-sn btn-default btn-close">
+                            <i class="fas fa-times"></i>
+                        </button>
                     </div>
                     <div class="info-boxes">
                         <div class="search">
