--- a/interacoes.html
+++ b/interacoes.html
@@ -759,7 +759,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-area area-add-right">
+                <div class="col-area area-add-right hide">
                     <div class="hdr">
                         <p>William Oliveira</p>
                         <button class="btn btn-sn btn-default btn-close">
@@ -801,6 +801,38 @@
                                     </p>
                                 </li>
                             </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-area area-add-right hide">
+                    <div class="hdr">
+                        <p>Base de Conhecimento</p>
+                        <button class="btn btn-sn btn-default btn-close">
+                            <i class="fas fa-times"></i>
+                        </button>
+                    </div>
+                    <div class="info-boxes">
+                        <div class="search">
+                            <input type="text" placeholder="Pesquisar">
+                        </div>
+                        <div class="ib-gp">
+                            {{ Base de Conhecimento }}
+                        </div>
+                    </div>
+                </div>
+                <div class="col-area area-add-right">
+                    <div class="hdr">
+                        <p>Base de Conhecimento</p>
+                        <button class="btn btn-sn btn-default btn-close">
+                            <i class="fas fa-times"></i>
+                        </button>
+                    </div>
+                    <div class="info-boxes">
+                        <div class="search">
+                            <input type="text" placeholder="Pesquisar">
+                        </div>
+                        <div class="ib-gp">
+                            {{ Base de Conhecimento }}
                         </div>
                     </div>
                 </div>
