--- a/interacoes.html
+++ b/interacoes.html
@@ -487,7 +487,7 @@
         </div>
         <div class="content">
             <div class="row">
-                <div class="col-area area-msg division-4">
+                <div class="col-area area-msg division-3">
                     <div class="hd">
                         <h5 class="contact-data"><i class="favorite fas fa-star"></i> {{William Oliveira}}<span>11 99105 4384</span><span>ID: 13214</span></h5>
                         <ul class="nav-icon">
@@ -820,7 +820,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-area area-add-right">
+                <div class="col-area area-add-right hide">
                     <div class="hdr">
                         <p>Base de Conhecimento</p>
                         <button class="btn btn-sn btn-default btn-close">
@@ -838,7 +838,7 @@
                 </div>
                 <div class="col-area area-add-right">
                     <div class="hdr">
-                        <p>Base de Conhecimento</p>
+                        <p>Classificar Mensagem</p>
                         <button class="btn btn-sn btn-default btn-close">
                             <i class="fas fa-times"></i>
                         </button>
@@ -848,7 +848,24 @@
                             <input type="text" placeholder="Pesquisar">
                         </div>
                         <div class="ib-gp">
-                            {{ Base de Conhecimento }}
+                            <h4>Descrição</h4>
+                            <p><strong>Data:</strong>07/12/2018</p>
+                            <p><strong>Horário envio:</strong>19:49:12</p>
+                            <p><strong>Horário recebido:</strong>19:49:30</p>
+                            <p><strong>Tempo de espera:</strong>01 min. e 23 seg.</p>
+                            <p><strong>Tempo de atendimento:</strong>01 min. e 23 seg.</p>
+                            <p><strong>TMA de resposta:</strong>00:00:32</p>
+                            <p><strong>Nome do atendente:</strong>Carlos Batista Correia</p>
+                            <p class="danger"><strong>Status do atendimento:</strong>Atrasado</p>
+                            <p><strong>Classificação:</strong><i class="favorite fas fa-star"></i><i class="favorite fas fa-star"></i><i class="favorite fas fa-star"></i><i class="favorite fas fa-star"></i><i class="favorite fas fa-star"></i></p>
+                            <p><strong>Assunto:</strong>Chocolate vencido</p>
+                            <p><strong>Recorrência:</strong>Sim</p>
+                            <p><strong>Qtd. Atendimento:</strong>1.821</p>
+                            <p><strong>Tipo de comentário:</strong>Reclamação</p>
+                            <p><strong>Atendimento Pai:</strong>23893</p>
+                            <p><strong>Comentário:</strong></p>
+                            <textarea name="" id=""></textarea>
+                            <button class="btn btn-sn btn-default">Adicionar</button>
                         </div>
                     </div>
                 </div>
