Resultado de pesquisa

--- a/interacoes.html
+++ b/interacoes.html
@@ -759,7 +759,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-area area-add-right hide">
+                <div class="col-area area-add-right contact hide">
                     <div class="hdr">
                         <p>William Oliveira</p>
                         <button class="btn btn-sn btn-default btn-close">
@@ -804,7 +804,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-area area-add-right hide">
+                <div class="col-area area-add-right knowledge hide">
                     <div class="hdr">
                         <p>Base de Conhecimento</p>
                         <button class="btn btn-sn btn-default btn-close">
@@ -820,9 +820,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-area area-add-right hide">
+                <div class="col-area area-add-right research">
                     <div class="hdr">
-                        <p>Base de Conhecimento</p>
+                        <p>Pesquisar na Conversa</p>
                         <button class="btn btn-sn btn-default btn-close">
                             <i class="fas fa-times"></i>
                         </button>
@@ -832,11 +832,30 @@
                             <input type="text" placeholder="Pesquisar">
                         </div>
                         <div class="ib-gp">
-                            {{ Base de Conhecimento }}
+                            <ul class="info-search">
+                                <li>
+                                    <p class="timer">12:02</p>
+                                    <p class="msgr">
+                                        <span>Fulano de Ta:</span> Segue o número do <strong>aten</strong>dimento, conforme solicitado pelo usuário Henrique Pinheiro
+                                    </p>
+                                </li>
+                                <li>
+                                    <p class="timer">12:02</p>
+                                    <p class="msgr">
+                                        <span>Fulano de Ta:</span> Segue o número do <strong>aten</strong>dimento, conforme solicitado pelo usuário Henrique Pinheiro                                            <span>Fulano de Ta:</span> Segue o número do <strong>aten</strong>diment...
+                                    </p>
+                                </li>
+                                <li>
+                                    <p class="timer">12:02</p>
+                                    <p class="msgr">
+                                        <span>Fulano de Ta:</span> Segue o número do <strong>aten</strong>dimento, conforme solicitado pelo usuário Henrique Pinheiro                                            <span>Fulano de Ta:</span> Segue o número do <strong>aten</strong>diment...
+                                    </p>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
-                <div class="col-area area-add-right">
+                <div class="col-area area-add-right rank hide">
                     <div class="hdr">
                         <p>Classificar Mensagem</p>
                         <button class="btn btn-sn btn-default btn-close">
