Ajuste no drop da msg

--- a/interacoes.html
+++ b/interacoes.html
@@ -547,7 +547,7 @@
                                 <div class="box-msg msg-client">
                                     <p>Lorem Ipsum</p>
                                     <span class="time-msg">11:37</span>
-                                    <button class="drop-action dp-active"><i class="fas fa-chevron-down"></i></button>
+                                    <button class="drop-action"><i class="fas fa-chevron-down"></i></button>
                                     <ul class="toggle-action">
                                         <li><a href="">Responder</a></li>
                                         <li class="active"><a href="">Encaminhar mensagem</a></li>
@@ -606,8 +606,7 @@
                                     <p>Lorem Ipsum</p>
                                     <span class="time-msg">11:37</span>
                                     <button class="drop-action dp-active"><i class="fas fa-chevron-down"></i></button>
-                                    <!-- <ul class="toggle-action active-tg"> -->
-                                    <ul class="toggle-action">
+                                    <ul class="toggle-action active-tg">
                                         <li><a href="">Responder</a></li>
                                         <li class="active"><a href="">Encaminhar mensagem</a></li>
                                         <li><a href="">Marcar mensagem</a></li>
@@ -629,7 +628,7 @@
                                 <div class="box-msg msg-client">
                                     <p>Lorem Ipsum</p>
                                     <span class="time-msg">11:37</span>
-                                    <button class="drop-action dp-active"><i class="fas fa-chevron-down"></i></button>
+                                    <button class="drop-action"><i class="fas fa-chevron-down"></i></button>
                                     <ul class="toggle-action">
                                         <li><a href="">Responder</a></li>
                                         <li class="active"><a href="">Encaminhar mensagem</a></li>
