--- a/interacoes.html
+++ b/interacoes.html
@@ -31,6 +31,20 @@
                     </ul>
                     <div class="search">
                         <input type="text" placeholder="Pesquisar">
+                        <ul class="drop-filter">
+                            <li class="list-filter active"><a href="">Por qualquer coisa</a></li>
+                            <li class="list-filter"><a href="">Por nome do contato</a></li>
+                            <li class="list-filter"><a href="">Por CPF</a></li>
+                            <li class="list-filter"><a href="">Por e-mail pessoal</a></li>
+                            <li class="list-filter"><a href="">Por telefone</a></li>
+                            <li class="more-filter">
+                                <ol>
+                                    <li class="list-more"><a href=""><i class="fas fa-star"></i> Favoritos</a></li>
+                                    <li class="list-more"><a href=""><i class="fas fa-comment-alt"></i> Não Lidas</a></li>
+                                    <li class="list-more"><a href=""><i class="fas fa-reply"></i> Não Respondidas</a></li>
+                                </ol>
+                            </li>
+                        </ul>
                     </div>
                 </div>
                 <div class="tab-content">
