Layout de pesquisar informações da conversa

--- a/interacoes.html
+++ b/interacoes.html
@@ -843,6 +843,32 @@
                     <div class="info-boxes">
                         <div class="search">
                             <input type="text" placeholder="Pesquisar">
+                            <ul class="drop-filter">
+                                <li class="pch list-filter">
+                                    <label>De:</label>
+                                    <input type="text" placeholder="Escreva aqui" class="int">
+                                </li>
+                                <li class="pch list-filter">
+                                    <label>Para:</label>
+                                    <input type="text" placeholder="Escreva aqui" class="int">
+                                </li>
+                                <li class="pch list-filter">
+                                    <label>Palavra:</label>
+                                    <input type="text" placeholder="Escreva aqui" class="int">
+                                </li>
+                                <li class="more-filter">
+                                    <ol>
+                                        <li class="list-more"><a href=""><i class="fas fa-paperclip"></i> Anexos</a></li>
+                                        <li class="list-more"><a href=""><i class="fas fa-camera"></i> Imagem</a></li>
+                                        <li class="list-more"><a href=""><i class="fas fa-video"></i> Vídeo</a></li>
+                                        <li class="list-more"><a href=""><i class="fas fa-volume-down"></i> Áudio</a></li>
+                                        <li class="list-more"><a href=""><i class="fas fa-grin-beam"></i> Emojis</a></li>
+                                        <li class="list-more"><a href=""><i class="fas fa-star"></i> Favoritos</a></li>
+                                        <li class="list-more"><a href=""><i class="fas fa-comment-alt"></i> Não Lidas</a></li>
+                                        <li class="list-more"><a href=""><i class="fas fa-reply"></i> Não Respondidas</a></li>
+                                    </ol>
+                                </li>
+                            </ul>
                         </div>
                         <div class="ib-gp">
                             <ul class="info-search">
@@ -850,6 +876,36 @@
                                     <p class="timer">12:02</p>
                                     <p class="msgr">
                                         <span>Fulano de Ta:</span> Segue o número do <strong>aten</strong>dimento, conforme solicitado pelo usuário Henrique Pinheiro
+                                    </p>
+                                </li>
+                                <li>
+                                    <p class="timer">12:02</p>
+                                    <p class="msgr">
+                                        <span>Fulano de Ta:</span> Segue o número do <strong>aten</strong>dimento, conforme solicitado pelo usuário Henrique Pinheiro                                            <span>Fulano de Ta:</span> Segue o número do <strong>aten</strong>diment...
+                                    </p>
+                                </li>
+                                <li>
+                                    <p class="timer">12:02</p>
+                                    <p class="msgr">
+                                        <span>Fulano de Ta:</span> Segue o número do <strong>aten</strong>dimento, conforme solicitado pelo usuário Henrique Pinheiro                                            <span>Fulano de Ta:</span> Segue o número do <strong>aten</strong>diment...
+                                    </p>
+                                </li>
+                                <li>
+                                    <p class="timer">12:02</p>
+                                    <p class="msgr">
+                                        <span>Fulano de Ta:</span> Segue o número do <strong>aten</strong>dimento, conforme solicitado pelo usuário Henrique Pinheiro                                            <span>Fulano de Ta:</span> Segue o número do <strong>aten</strong>diment...
+                                    </p>
+                                </li>
+                                <li>
+                                    <p class="timer">12:02</p>
+                                    <p class="msgr">
+                                        <span>Fulano de Ta:</span> Segue o número do <strong>aten</strong>dimento, conforme solicitado pelo usuário Henrique Pinheiro                                            <span>Fulano de Ta:</span> Segue o número do <strong>aten</strong>diment...
+                                    </p>
+                                </li>
+                                <li>
+                                    <p class="timer">12:02</p>
+                                    <p class="msgr">
+                                        <span>Fulano de Ta:</span> Segue o número do <strong>aten</strong>dimento, conforme solicitado pelo usuário Henrique Pinheiro                                            <span>Fulano de Ta:</span> Segue o número do <strong>aten</strong>diment...
                                     </p>
                                 </li>
                                 <li>
