--- a/interacoes.html
+++ b/interacoes.html
@@ -757,6 +757,34 @@
                                 </div>
                             </div>
 
+                            <div class="msg-info">
+                                <div class="box-msg msg-client">
+
+                                    <div class="msg-info">
+                                        <div class="box-msg msg-operator">
+                                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </p>
+                                        </div>
+                                    </div>
+
+                                    <p>Exemplo de mensagem respondida</p>
+                                    <span class="time-msg">11:37</span>
+                                    <button class="drop-action"><i class="fas fa-chevron-down"></i></button>
+                                    <ul class="toggle-action">
+                                        <li><a href="">Responder</a></li>
+                                        <li class="active"><a href="">Encaminhar mensagem</a></li>
+                                        <li><a href="">Marcar mensagem</a></li>
+                                        <li><a href="">Apagar mensagem</a></li>
+                                        <li><a href="">Classificar mensagem</a></li>
+                                        <li><a href="">Detalhes da mensagem</a></li>
+                                    </ul>
+                                    <div class="progress-pl answered">
+                                        <div class="progress-pl-bar" style="width: 25%">
+                                            <div class="timer-prgress">00:58</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
                         </div>
                     </div>
                     <div class="toolsbar-msg">
