Funcionalidade scroll no final

--- a/interacoes.html
+++ b/interacoes.html
@@ -553,7 +553,7 @@
                         </ul>
                     </div>
                     <div class="main-msg">
-                        <div class="ct-msg">
+                        <div class="ct-msg" id="scroll">
 
                             <div class="date-msg">Segunda-feira</div>
 
@@ -1047,6 +1047,6 @@
             </div>
         </div>
     </div>
+    <script src="src/js/script.js"></script>
 </body>
-
 </html>
