Script fracassado para habilitar search de pesquisa

--- a/interacoes.html
+++ b/interacoes.html
@@ -30,8 +30,8 @@
                         <li><a data-toggle="tab" href="#group">Grupos</a></li>
                     </ul>
                     <div class="search">
-                        <input type="text" placeholder="Pesquisar">
-                        <ul class="drop-filter">
+                        <input type="text" placeholder="Pesquisar" id="searchContact">
+                        <ul class="drop-filter" id="filterSearch">
                             <li class="list-filter active"><a href="">Por qualquer coisa</a></li>
                             <li class="list-filter"><a href="">Por nome do contato</a></li>
                             <li class="list-filter"><a href="">Por CPF</a></li>
@@ -949,8 +949,8 @@
                     </div>
                     <div class="info-boxes">
                         <div class="search">
-                            <input type="text" placeholder="Pesquisar">
-                            <ul class="drop-filter">
+                            <input type="text" placeholder="Pesquisar" id="searchMsg">
+                            <ul class="drop-filter" id="filterMsg">
                                 <li class="pch list-filter">
                                     <label>De:</label>
                                     <input type="text" placeholder="Escreva aqui" class="int">
