Open and close sidebar search

--- a/interacoes.html
+++ b/interacoes.html
@@ -505,9 +505,9 @@
                     <div class="hd">
                         <h5 class="contact-data"><i class="favorite fas fa-star"></i> William Oliveira<span>11 99105 4384</span><span>ID: 13214</span></h5>
                         <ul class="nav-icon">
-                            <li><a href=""><i class="fas fa-search"></i></a></li>
-                            <li><a href=""><i class="fas fa-brain"></i></a></li>
-                            <li><a href=""><i class="fas fa-info-circle"></i></a></li>
+                            <li id="searchCont"><i class="fas fa-search"></i></li>
+                            <li><i class="fas fa-brain"></i></li>
+                            <li><i class="fas fa-info-circle"></i></li>
                         </ul>
                     </div>
                     <div class="tools">
@@ -882,7 +882,7 @@
                 <div class="col-area area-add-right contact hide">
                     <div class="hdr">
                         <p>William Oliveira</p>
-                        <button class="btn btn-sn btn-default btn-close">
+                        <button class="btn btn-sn btn-default btn-close" id="btnCloseContact">
                             <i class="fas fa-times"></i>
                         </button>
                     </div>
