Habilitar sidebar lateral direita

--- a/interacoes.html
+++ b/interacoes.html
@@ -506,8 +506,8 @@
                         <h5 class="contact-data"><i class="favorite fas fa-star"></i> William Oliveira<span>11 99105 4384</span><span>ID: 13214</span></h5>
                         <ul class="nav-icon">
                             <li id="searchCont"><i class="fas fa-search"></i></li>
-                            <li><i class="fas fa-brain"></i></li>
-                            <li><i class="fas fa-info-circle"></i></li>
+                            <li id="knowledgeLink"><i class="fas fa-brain"></i></li>
+                            <li id="researchLink"><i class="fas fa-info-circle"></i></li>
                         </ul>
                     </div>
                     <div class="tools">
@@ -927,7 +927,7 @@
                 <div class="col-area area-add-right knowledge hide">
                     <div class="hdr">
                         <p>Base de Conhecimento</p>
-                        <button class="btn btn-sn btn-default btn-close">
+                        <button class="btn btn-sn btn-default btn-close" id="btnCloseKnowledge">
                             <i class="fas fa-times"></i>
                         </button>
                     </div>
@@ -943,7 +943,7 @@
                 <div class="col-area area-add-right research hide">
                     <div class="hdr">
                         <p>Pesquisar na Conversa</p>
-                        <button class="btn btn-sn btn-default btn-close">
+                        <button class="btn btn-sn btn-default btn-close" id="btnCloseResearch">
                             <i class="fas fa-times"></i>
                         </button>
                     </div>
