Adicionando ação na classificação de msg

--- a/interacoes.html
+++ b/interacoes.html
@@ -565,11 +565,11 @@
                                         <i class="fas fa-chevron-down"></i>
                                         <ul class="toggle-action" id="tgl-act1">
                                             <li><a href="">Responder</a></li>
-                                            <li class="active"><a href="">Encaminhar mensagem</a></li>
+                                            <li><a href="">Encaminhar mensagem</a></li>
                                             <li><a href="">Marcar mensagem</a></li>
                                             <li><a href="">Apagar mensagem</a></li>
                                             <li><a href="">Classificar mensagem</a></li>
-                                            <li><a href="">Detalhes da mensagem</a></li>
+                                            <li class="detailMsg">Detalhes da mensagem</li>
                                         </ul>
                                     </button> 
                                     <div class="progress-pl answered">
@@ -588,11 +588,11 @@
                                         <i class="fas fa-chevron-down"></i>
                                         <ul class="toggle-action" id="tgl-act2">
                                             <li><a href="">Responder</a></li>
-                                            <li class="active"><a href="">Encaminhar mensagem</a></li>
+                                            <li><a href="">Encaminhar mensagem</a></li>
                                             <li><a href="">Marcar mensagem</a></li>
                                             <li><a href="">Apagar mensagem</a></li>
                                             <li><a href="">Classificar mensagem</a></li>
-                                            <li><a href="">Detalhes da mensagem</a></li>
+                                            <li class="detailMsg">Detalhes da mensagem</li>
                                         </ul>
                                     </button> 
                                     <div class="progress-pl">
@@ -627,11 +627,11 @@
                                         <i class="fas fa-chevron-down"></i>
                                         <ul class="toggle-action" id="tgl-act3">
                                             <li><a href="">Responder</a></li>
-                                            <li class="active"><a href="">Encaminhar mensagem</a></li>
+                                            <li><a href="">Encaminhar mensagem</a></li>
                                             <li><a href="">Marcar mensagem</a></li>
                                             <li><a href="">Apagar mensagem</a></li>
                                             <li><a href="">Classificar mensagem</a></li>
-                                            <li><a href="">Detalhes da mensagem</a></li>
+                                            <li class="detailMsg">Detalhes da mensagem</li>
                                         </ul>
                                     </button> 
                                     <div class="progress-pl answered">
@@ -652,11 +652,11 @@
                                         <i class="fas fa-chevron-down"></i>
                                         <ul class="toggle-action" id="tgl-act4">
                                             <li><a href="">Responder</a></li>
-                                            <li class="active"><a href="">Encaminhar mensagem</a></li>
+                                            <li><a href="">Encaminhar mensagem</a></li>
                                             <li><a href="">Marcar mensagem</a></li>
                                             <li><a href="">Apagar mensagem</a></li>
                                             <li><a href="">Classificar mensagem</a></li>
-                                            <li><a href="">Detalhes da mensagem</a></li>
+                                            <li class="detailMsg">Detalhes da mensagem</li>
                                         </ul>
                                     </button> 
                                     <div class="progress-pl answered">
@@ -675,11 +675,11 @@
                                         <i class="fas fa-chevron-down"></i>
                                         <ul class="toggle-action" id="tgl-act5">
                                             <li><a href="">Responder</a></li>
-                                            <li class="active"><a href="">Encaminhar mensagem</a></li>
+                                            <li><a href="">Encaminhar mensagem</a></li>
                                             <li><a href="">Marcar mensagem</a></li>
                                             <li><a href="">Apagar mensagem</a></li>
                                             <li><a href="">Classificar mensagem</a></li>
-                                            <li><a href="">Detalhes da mensagem</a></li>
+                                            <li class="detailMsg">Detalhes da mensagem</li>
                                         </ul>
                                     </button> 
                                     <div class="progress-pl">
@@ -719,11 +719,11 @@
                                         <i class="fas fa-chevron-down"></i>
                                         <ul class="toggle-action" id="tgl-act6">
                                             <li><a href="">Responder</a></li>
-                                            <li class="active"><a href="">Encaminhar mensagem</a></li>
+                                            <li><a href="">Encaminhar mensagem</a></li>
                                             <li><a href="">Marcar mensagem</a></li>
                                             <li><a href="">Apagar mensagem</a></li>
                                             <li><a href="">Classificar mensagem</a></li>
-                                            <li><a href="">Detalhes da mensagem</a></li>
+                                            <li class="detailMsg">Detalhes da mensagem</li>
                                         </ul>
                                     </button> 
                                     <div class="progress-pl answered">
@@ -749,11 +749,11 @@
                                         <i class="fas fa-chevron-down"></i>
                                         <ul class="toggle-action" id="tgl-act7">
                                             <li><a href="">Responder</a></li>
-                                            <li class="active"><a href="">Encaminhar mensagem</a></li>
+                                            <li><a href="">Encaminhar mensagem</a></li>
                                             <li><a href="">Marcar mensagem</a></li>
                                             <li><a href="">Apagar mensagem</a></li>
                                             <li><a href="">Classificar mensagem</a></li>
-                                            <li><a href="">Detalhes da mensagem</a></li>
+                                            <li class="detailMsg">Detalhes da mensagem</li>
                                         </ul>
                                     </button> 
                                     <div class="progress-pl">
@@ -786,11 +786,11 @@
                                         <i class="fas fa-chevron-down"></i>
                                         <ul class="toggle-action" id="tgl-act8">
                                             <li><a href="">Responder</a></li>
-                                            <li class="active"><a href="">Encaminhar mensagem</a></li>
+                                            <li><a href="">Encaminhar mensagem</a></li>
                                             <li><a href="">Marcar mensagem</a></li>
                                             <li><a href="">Apagar mensagem</a></li>
                                             <li><a href="">Classificar mensagem</a></li>
-                                            <li><a href="">Detalhes da mensagem</a></li>
+                                            <li class="detailMsg">Detalhes da mensagem</li>
                                         </ul>
                                     </button> 
                                     <div class="progress-pl answered">
@@ -814,11 +814,11 @@
                                         <i class="fas fa-chevron-down"></i>
                                         <ul class="toggle-action" id="tgl-act9">
                                             <li><a href="">Responder</a></li>
-                                            <li class="active"><a href="">Encaminhar mensagem</a></li>
+                                            <li><a href="">Encaminhar mensagem</a></li>
                                             <li><a href="">Marcar mensagem</a></li>
                                             <li><a href="">Apagar mensagem</a></li>
                                             <li><a href="">Classificar mensagem</a></li>
-                                            <li><a href="">Detalhes da mensagem</a></li>
+                                            <li class="detailMsg">Detalhes da mensagem</li>
                                         </ul>
                                     </button> 
                                     <div class="progress-pl answered">
@@ -842,11 +842,11 @@
                                         <i class="fas fa-chevron-down"></i>
                                         <ul class="toggle-action" id="tgl-act10">
                                             <li><a href="">Responder</a></li>
-                                            <li class="active"><a href="">Encaminhar mensagem</a></li>
+                                            <li><a href="">Encaminhar mensagem</a></li>
                                             <li><a href="">Marcar mensagem</a></li>
                                             <li><a href="">Apagar mensagem</a></li>
                                             <li><a href="">Classificar mensagem</a></li>
-                                            <li><a href="">Detalhes da mensagem</a></li>
+                                            <li class="detailMsg">Detalhes da mensagem</li>
                                         </ul>
                                     </button>                                    
                                     <div class="progress-pl answered">
@@ -1034,7 +1034,7 @@
                 <div class="col-area area-add-right rank hide">
                     <div class="hdr">
                         <p>Classificar Mensagem</p>
-                        <button class="btn btn-sn btn-default btn-close">
+                        <button class="btn btn-sn btn-default btn-close" id="btnCloseRank">
                             <i class="fas fa-times"></i>
                         </button>
                     </div>
