Active action btn

--- a/interacoes.html
+++ b/interacoes.html
@@ -517,8 +517,8 @@
                             <button type="button" class="btn-full btn btn-sm btn-default">Transferir</button>
                             <button type="button" class="btn-full btn btn-sm btn-default">Conferência</button>
 
-                            <button type="button" class="btn btn-sm btn-small"><i class="fas fa-chevron-down"></i></button>
-                            <ul class="toggle-action">
+                            <button type="button" class="btn btn-sm btn-small" id="btnSmall"><i class="fas fa-chevron-down"></i></button>
+                            <ul class="toggle-action" id="dropAction">
                                 <li><a href="">Atendimento</a></li>
                                 <li class="active"><a href="">Encerrar</a></li>
                                 <li><a href="">Transferir</a></li>
